--- a/about/index.html
+++ b/about/index.html
@@ -125,55 +125,44 @@
         <h1 class="title">About</h1>
         <div class="content">
 
-<p>Lorem markdownum aequalis strigis. <em>Saetigeri iubeas</em>, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum quin. Rupes vetat videndo, armigerae
-crimen habet Priamum nec.</p>
+<p>Wow! Don&rsquo;t you love technology, and hate it too.<br />
+This project started out as a way to see how long it
+really takes to get a full website up and &ldquo;out the door&rdquo;.
+I also wanted to see what kind of issues roadblocks there<br />
+were and if I could make the process faster from idea
+to reality.  There are many hurdles, most stemming from too
+many options and how do you know which to choose. Just look at
+at a simple virtual phone number or an IVR. None are cheap enough
+for a simple site to get up and running and who want&rsquo;s to give out
+a cell phone number for business only to be blasted with calls.<br />
+ One of my personal issues being in technogloy for quite some time
+is getting distracted with lots of options to do things, as they
+say in Unix there&rsquo;s always more than one way to do it.
+I admit it&rsquo;s easy to get get sidetracked and started this site in
+the hopes to help others and make the process faster.</p>
 
-<h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
+<h2 id="it-s-all-about-the-automation">It&rsquo;s all about the automation</h2>
 
-<p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
-Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
-male! Quo sed <a href="#vexant-achivi">fuit flexit et</a> hic die solido, gloria?</p>
+<p>Automation is great.  If I can script it, why repeat it. What they don&rsquo;t tell you
+is that it might take 3 times as long instead of just making the change manually
+instead of automating it because the amount of testing behind
+the process is usually way more complex than just the original problem.</p>
 
 <ol>
-<li>Cum det dixit Parcarum qui spemque est</li>
-<li>Exit ex huic</li>
-<li>Quod consiste agitataque claustraque vicina videt lacertis</li>
-<li>Loquor videt</li>
-<li>Ardua non igne caelesti coniugis cognovi diversorum</li>
-<li>Per nunc pariterque saeva vindicet</li>
+<li>Can automation be used to make the process reliable?</li>
+<li>Does it make sense to automate?</li>
+<li>Will it make things faster?<br /></li>
+<li>What happens when automation breaks?</li>
 </ol>
 
-<p>Locus evicit loquuntur Tyrrhena omnes, obstipui pugnabant temptavit Phoco <em>vati</em>
-dabant deus. Memorata haberet sepulcrales gentisque dum sic, in flumina templa!
-Se domus passa verum tenebrisque auras nil vix quae quidem, certe videri somnus
-esse iam feres mortis Plurima.</p>
+<p>These are the questions we are trying to solve.  It&rsquo;s a work in progress.  Stay tuned
+for more updates as the site evolves.</p>
 
-<h2 id="postquam-tamen">Postquam tamen</h2>
+<h2 id="the-road-less-traveled">The road less traveled</h2>
 
-<p>Et nec ingentem est minus faciunt praecipue posse auctoremque sedes transmittere
-et pedes miratur erat animaeque. Tellus admonuit humanam funes, sagittis et
-licet! Inserui quamvis Clymeni.</p>
-
-<ul>
-<li>Parens est studiisque interea</li>
-<li>Pro istis mediis carnes iste nec imperat</li>
-<li>Te vocas orat nisi quantumque castra</li>
-<li>Gestumque crepuscula esse videntur coegit</li>
-<li>Ambo videtque gerat aquae ferens vagina</li>
-<li>Adde leviter faciam tetigisse regunt concava in</li>
-</ul>
-
-<p>Superi monilia omnes Cyprio Scylla cibos punica quae succincta pallent de
-incubat hostes montibus, de moderato efficiet vulnere. Letum Atalanta Pallas,
-vis, saxo recepta <a href="#fati">membra contractosque</a> remigis <a href="#dissipat">vulnere vetus
-parte</a> indignata supera.</p>
-
-<p>Quantum auxilium datus; sed pineta et, iuvenes redito; credas mensae, meum. Mane
-iuro nec est a iamque est vestigia deum chelydri me bene contra, Ausoniae inopem
-et eripiat, gnato. Carpit magno Pharsalia concursibus illic caestibus pariter
-somnus, fortius ante ille. Superasse induit <em>celare</em> cadunt, ut Armeniae per
-tamen lentis spectat, Titania est animo.</p>
+<p>So the road less traveled can be fun for sure.  There are usually not as clear road signs and
+makes things interesting as you learn that some roads are not meant to be traveled, but
+you won&rsquo;t know until you take the chance.</p>
 </div>
       </div>
     </div>
