--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <h2 class="service-title">
       <a href="http://thecoswi.com/services/website-creation/">Website creation</a>
     </h2>
-    <p> Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum de obside ut laniavit arbor palmis, cum…</p>
+    <p> We are deploying websites with Hugo. It’s awesome. Templating themes make the process much easier. BuiltWithHugo, may…</p>
   </div>
 </div>
 
