--- a/services/index.html
+++ b/services/index.html
@@ -126,7 +126,7 @@
 
 <h1 id="services-that-grow-with-your-business">Services that grow with your business</h1>
 
-<p>Aligning with thecoswi.com team is a great partnership.  We want to help people take there ideas and make them a reality sooner and get up and working on the business.</p>
+<p>Aligning with thecoswi.com team is a great partnership opportunity.  We want to help people take ideas and make them a reality sooner and get up and working on the business.</p>
 
       </div>
       
@@ -148,7 +148,7 @@
     <h2 class="service-title">
       <a href="http://thecoswi.com/services/website-creation/">Website creation</a>
     </h2>
-    <p> Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum de obside ut laniavit arbor palmis, cum…</p>
+    <p> We are deploying websites with Hugo. It’s awesome. Templating themes make the process much easier. BuiltWithHugo, may…</p>
   </div>
 </div>
 </div>
