--- a/team/jerrett-levensalor/index.html
+++ b/team/jerrett-levensalor/index.html
@@ -123,7 +123,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Jerrett Levensalor</h1>
-        <div class="content"><p>Technical evangelist that continues to push the envelope and make automation a way of life.  The mantra deploy fast, fail fast if needed, but keep moving forward.  We want to make the process of taking ideas and startups in a direction that makes something tangible that you can see and interact with quickly.  Let&rsquo;s face it, it&rsquo;s easy to get distracted, without time management we can all lose our way.  It&rsquo;s important to see results to keep you on track and that is what we are motivated to achieve.</p>
+        <div class="content"><p>Technical evangelist advisor. We are constantly pushing the envelope to make automation a way of life.  The mantra deploy fast, fail fast only if needed, but always keep moving forward.  We want to make the process of taking ideas and startups in a direction that makes something tangible that you can see and interact with quickly.  Let&rsquo;s face it, it&rsquo;s easy to get distracted, without time management we can all lose our way.  It&rsquo;s important to see results to keep you on track and that is what we are motivated to achieve.</p>
 </div>
       </div>
     </div>
