--- a/services/website-creation/index.html
+++ b/services/website-creation/index.html
@@ -125,55 +125,25 @@
         <h1 class="title">Website creation</h1>
         <div class="content">
 
-<p>Lorem markdownum aequalis strigis. <em>Saetigeri iubeas</em>, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum quin. Rupes vetat videndo, armigerae
-crimen habet Priamum nec.</p>
+<p>We are deploying websites with Hugo.  It&rsquo;s awesome.  Templating
+themes make the process much easier. <em>BuiltWithHugo</em>, may be the
+current new and &lsquo;hotness&rsquo; but we think it definitely makes things
+much easier to roll out. New features are always being rolled out.</p>
 
-<h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
+<h2 id="is-a-hugo-built-site-for-you">Is a hugo built site for you?</h2>
 
 <p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
 Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
 male! Quo sed <a href="#vexant-achivi">fuit flexit et</a> hic die solido, gloria?</p>
 
 <ol>
-<li>Cum det dixit Parcarum qui spemque est</li>
-<li>Exit ex huic</li>
-<li>Quod consiste agitataque claustraque vicina videt lacertis</li>
-<li>Loquor videt</li>
-<li>Ardua non igne caelesti coniugis cognovi diversorum</li>
-<li>Per nunc pariterque saeva vindicet</li>
+<li>Fast prototyping</li>
+<li>Just worry about editing the content</li>
+<li>Main page, blogs, ecommerce</li>
+<li>No major backends to worry about</li>
+<li>Fast compile and build times<br /></li>
+<li>Fast performance(notice the trend about fast!)</li>
 </ol>
-
-<p>Locus evicit loquuntur Tyrrhena omnes, obstipui pugnabant temptavit Phoco <em>vati</em>
-dabant deus. Memorata haberet sepulcrales gentisque dum sic, in flumina templa!
-Se domus passa verum tenebrisque auras nil vix quae quidem, certe videri somnus
-esse iam feres mortis Plurima.</p>
-
-<h2 id="postquam-tamen">Postquam tamen</h2>
-
-<p>Et nec ingentem est minus faciunt praecipue posse auctoremque sedes transmittere
-et pedes miratur erat animaeque. Tellus admonuit humanam funes, sagittis et
-licet! Inserui quamvis Clymeni.</p>
-
-<ul>
-<li>Parens est studiisque interea</li>
-<li>Pro istis mediis carnes iste nec imperat</li>
-<li>Te vocas orat nisi quantumque castra</li>
-<li>Gestumque crepuscula esse videntur coegit</li>
-<li>Ambo videtque gerat aquae ferens vagina</li>
-<li>Adde leviter faciam tetigisse regunt concava in</li>
-</ul>
-
-<p>Superi monilia omnes Cyprio Scylla cibos punica quae succincta pallent de
-incubat hostes montibus, de moderato efficiet vulnere. Letum Atalanta Pallas,
-vis, saxo recepta <a href="#fati">membra contractosque</a> remigis <a href="#dissipat">vulnere vetus
-parte</a> indignata supera.</p>
-
-<p>Quantum auxilium datus; sed pineta et, iuvenes redito; credas mensae, meum. Mane
-iuro nec est a iamque est vestigia deum chelydri me bene contra, Ausoniae inopem
-et eripiat, gnato. Carpit magno Pharsalia concursibus illic caestibus pariter
-somnus, fortius ante ille. Superasse induit <em>celare</em> cadunt, ut Armeniae per
-tamen lentis spectat, Titania est animo.</p>
 </div>
       </div>
     </div>
