fixing website creation

--- a/services/website-creation/index.html
+++ b/services/website-creation/index.html
@@ -132,9 +132,8 @@ much easier to roll out. New features are always being rolled out.</p>
 
 <h2 id="is-a-hugo-built-site-for-you">Is a hugo built site for you?</h2>
 
-<p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
-Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
-male! Quo sed <a href="#vexant-achivi">fuit flexit et</a> hic die solido, gloria?</p>
+<p>These are just some of the things that make Hugo great.
+<a href="#vexant-achivi">Hugo is fast</a> really, really fast!</p>
 
 <ol>
 <li>Fast prototyping</li>
