--- a/about/index.html
+++ b/about/index.html
@@ -230,6 +230,18 @@ you won&rsquo;t know until you take the chance.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
