--- a/services/business-sales/index.html
+++ b/services/business-sales/index.html
@@ -206,6 +206,18 @@ and require updates, but our mission is to keep people on track.<br />
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
