--- a/services/domain-email-setup/index.html
+++ b/services/domain-email-setup/index.html
@@ -232,6 +232,18 @@ just focus on getting you up and running and charge accordingly.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
