--- a/services/monitoring-analytics/index.html
+++ b/services/monitoring-analytics/index.html
@@ -203,6 +203,18 @@ general@thecoswi.com</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
