--- a/services/phone-ivr/index.html
+++ b/services/phone-ivr/index.html
@@ -228,6 +228,18 @@ away.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
