--- a/services/website-creation/index.html
+++ b/services/website-creation/index.html
@@ -216,6 +216,18 @@ much easier to roll out. New features are always being rolled out.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA151686521-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA151686521-1');
+</script>
+
+
 
 
   
