--- a/about/index.html
+++ b/about/index.html
@@ -234,6 +234,18 @@ you won&rsquo;t know until you take the chance.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '151686521');
+</script>
+
+
 
 
   
