--- a/services/business-sales/index.html
+++ b/services/business-sales/index.html
@@ -210,6 +210,18 @@ and require updates, but our mission is to keep people on track.<br />
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '151686521');
+</script>
+
+
 
 
   
