--- a/services/domain-email-setup/index.html
+++ b/services/domain-email-setup/index.html
@@ -236,6 +236,18 @@ just focus on getting you up and running and charge accordingly.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '151686521');
+</script>
+
+
 
 
   
