--- a/services/website-creation/index.html
+++ b/services/website-creation/index.html
@@ -220,6 +220,18 @@ much easier to roll out. New features are always being rolled out.</p>
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '151686521');
+</script>
+
+
 
 
   
