--- a/team/index.html
+++ b/team/index.html
@@ -227,6 +227,18 @@
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '151686521');
+</script>
+
+
 
 
   
