--- a/about/index.html
+++ b/about/index.html
@@ -230,7 +230,7 @@ you won&rsquo;t know until you take the chance.</p>
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -238,7 +238,7 @@ you won&rsquo;t know until you take the chance.</p>
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
