--- a/contact/index.html
+++ b/contact/index.html
@@ -247,7 +247,7 @@
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -255,7 +255,7 @@
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
