--- a/services/business-sales/index.html
+++ b/services/business-sales/index.html
@@ -206,7 +206,7 @@ and require updates, but our mission is to keep people on track.<br />
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -214,7 +214,7 @@ and require updates, but our mission is to keep people on track.<br />
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
