--- a/services/domain-email-setup/index.html
+++ b/services/domain-email-setup/index.html
@@ -232,7 +232,7 @@ just focus on getting you up and running and charge accordingly.</p>
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -240,7 +240,7 @@ just focus on getting you up and running and charge accordingly.</p>
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
