--- a/services/monitoring-analytics/index.html
+++ b/services/monitoring-analytics/index.html
@@ -203,7 +203,7 @@ general@thecoswi.com</p>
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -211,7 +211,7 @@ general@thecoswi.com</p>
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
