--- a/services/website-creation/index.html
+++ b/services/website-creation/index.html
@@ -216,7 +216,7 @@ much easier to roll out. New features are always being rolled out.</p>
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -224,7 +224,7 @@ much easier to roll out. New features are always being rolled out.</p>
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
