--- a/team/jerrett-levensalor/index.html
+++ b/team/jerrett-levensalor/index.html
@@ -191,7 +191,7 @@
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=151686521"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151686521-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -199,7 +199,7 @@
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', '151686521');
+  gtag('config', 'UA-151686521-1');
 </script>
 
 
